# Scripts-and-Notebooks

./: .env  .gitignore  HCIAudioClassification.ipynb  HCI_Audio_Classification.ipynb  LICENSE.txt  LearnPython.ipynb  README.md  UmfrageAuswertung.ipynb  UniSWE.ipynb  custom_logger.py  database_abstraction.py  development_functions.py  diary.py  divide_list.py  logs.txt  logs_2.txt  practice_sql.ipynb  read_file.py  requirements.txt  streamlit_dashboard.py  streamlit_get_client_ip.py  total_war_warhammer.ipynb  web_scraping.py  web_scraping_new.py
.devcontainer/: devcontainer.json  devcontainer.json.example  devcontainer.txt
AI Test/: symbolic.py  test_api_hugging.py  test_api_openai.py
Algorithms and DataStructures/: BuddyMemoryAllocation.sh
AlgorithmsAndDataStructures/: regression.asv  regression.m  simple_hash.m  test_matlab.m
Analytics/: matlab_basics.mlx
BA/: random_data.db  uebung.ipynb
CICD/: Backend_BuildAndTest_NoDeploy.yml  GitFlow.docx  New Text Document.txt
Chatbot/: main.py
Color Themes/: MonokaiSpectrum.theme
DevTools/: read.py
Diary/: diary.py
Kubernetes/: config.bu  storage.bu  test.bu
Large Language Models/: test_guidance.ipynb  test_langflow.py
LargeLanguageModels/: generate_example_data.ipynb  generate_example_documents.py  test_guidance.ipynb  transformer_pipeline.py
Machine learning/: tic_tac_toe.py
OCR/: extract_video_titels.ipynb  test1.ipynb  test_document_ai.ipynb  test_easyocr.ipynb
RPA/: automated_support_tickets.py  email_download_example.ipynb  email_notification_example.ipynb  file_processing_example.ipynb  process_document_example.ipynb
Web scraping/: find_players_op.py  find_players_u.py  find_players_u_old_version.py  learn_web_scraping.py  scrape_all_top_players.py
WebScraping/: find_players_op.py  web_scraping.py
Youtube music library manager/: YoutubemusicLibraryManager.py  backup_music_library.py  library_manager_test.py  move_your_library.py
ai-model-router/: Dockerfile  config.example.yaml  main.py  requirements.txt
algorithms/: caesar_cipher.m
configs/: MonokaiSpectrumBreezeDark.theme
mcps/citation_tool/: .env.example  README.md  citation-engine-design.md  podman-compose.yml  pyproject.toml
mcps/citation_tool/docs/: api-reference.md  configuration.md  quickstart.md  usage-guide.md
mcps/citation_tool/src/: __init__.py
mcps/citation_tool/src/citation_engine/: __init__.py  engine.py  models.py  schema.py  tool.py
mcps/citation_tool/tests/: __init__.py  conftest.py  test_engine.py  test_integration_llm.py  test_integration_postgres.py  test_integration_web.py
ocr/: test.ipynb  (+2 more)
(+423 files in other folders)
