[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citation-engine"
version = "0.1.0"
description = "Citation & Provenance Engine for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Claude Code Assistant"}
]
keywords = [
    "citation",
    "provenance",
    "ai",
    "langchain",
    "langgraph",
    "verification",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
# Core dependencies for full functionality
full = [
    "pymupdf>=1.23.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
]
# PDF extraction support
pdf = [
    "pymupdf>=1.23.0",
]
# Web fetching support
web = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]
# LangChain/LangGraph integration
langchain = [
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
]
# PostgreSQL support for multi-agent mode
postgresql = [
    "psycopg2-binary>=2.9.0",
]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Repository = "https://github.com/your-repo/citation-engine"
Documentation = "https://github.com/your-repo/citation-engine#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
